<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    >
    <Button
        android:id="@+id/redButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000"
        android:text="@string/person_1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        />
    <Button
        android:id="@+id/greenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#008000"
        android:text="@string/person_2"
        android:layout_below="@+id/redButton"
        android:layout_centerHorizontal="true"
        />

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignBottom="@+id/greenButton"-->
        <!--&gt;-->
        <TextView
            android:id="@+id/middleTextView"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:text="@string/this_is_middle"
            android:layout_below="@+id/greenButton"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/leftTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/this_is_left"
            android:layout_below="@id/greenButton"
            android:layout_toStartOf="@+id/greenButton"
            android:layout_toLeftOf="@+id/middleTextView"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp"
            />
        <TextView
            android:id="@+id/rightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/this_is_right"
            android:layout_below="@id/greenButton"
            android:layout_toRightOf="@id/middleTextView"
            android:layout_toEndOf="@+id/middleTextView"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            />
    <!--</LinearLayout>-->

    <Button
        android:layout_below="@id/rightTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="end"
        android:textColor="#0000FF"
        android:text="@string/person_3"/>

</RelativeLayout>
